act icono y otros

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -12,5 +12,7 @@
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "none",
-  "useTabs": false
+  "useTabs": false,
+  "parser": "php",
+  "plugins": ["@prettier/plugin-php"]
 }
